--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,8 +1,7 @@
-.home-body {
-    display: flex;
+.body {
     min-height: 100vh;
     font-family: 'Poppins';
-    flex-direction: column;
+    background-color: #ffffff;
 }
 
 /* Container - 1 */
@@ -13,11 +12,36 @@
     flex-direction: column;
 }
 
-
 .home-search {
     padding: 10px;
     display: flex;
     justify-content: center;
+}
+
+.home-search-bar {
+    width: 100vw;
+    display: flex;
+    padding: 2px;
+    max-width: 600px;
+    user-select: none;
+    border-radius: 8px;
+    background-color: rgb(200, 200, 200);
+}
+
+.home-search-bar-input {
+    width: 100%;
+    border: none;
+    padding: 10px;
+    outline: none;
+    font-size: 1rem;
+    font-family: 'Poppins';
+    background-color: rgb(200, 200, 200);
+}
+
+.home-search-bar-button {
+    border: none;
+    cursor: pointer;
+    background-color: rgb(200, 200, 200);
 }
 
 .home-section {
@@ -35,36 +59,31 @@
 }
 
 .home-section-2 {
-    font-weight: 300;
-    font-size: 1.3rem;
-    letter-spacing: 3px;
-    margin-bottom: 10px;
-}
-
-.home-section-3 {
     width: 100vw;
     display: flex;
     max-width: 600px;
     justify-content: space-around;
 }
 
-.home-section-3-main {
+.home-section-2-main {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.home-section-3-main-head {
+.home-section-2-main-head {
     flex: 1;
     display: flex;
+    user-select: none;
+    pointer-events: none;
 }
 
-.home-section-3-main-temp {
+.home-section-2-main-temp {
     font-size: 10rem;
     font-weight: 200;
 }
 
-.home-section-3-main-cel {
+.home-section-2-main-cel {
     margin-top: 25px;
     font-size: 1.3rem;
 }
@@ -73,7 +92,7 @@
     height: 15rem;
 }
 
-.home-section-3-main-foot {
+.home-section-2-main-foot {
     font-size: 1.2rem;
 }
 
@@ -82,31 +101,21 @@
         font-size: 1.9rem;
         letter-spacing: 1px;
     }
-    
-    .home-section-2 {
-        font-size: 1.2rem;
-        letter-spacing: 2px;
-    }
-    
-    .home-section-2 {
-        font-size: 1.2em;
-        letter-spacing: 2px;
-    }
-    
-    .home-section-3-main-temp {
+
+    .home-section-2-main-temp {
         font-size: 8rem;
     }
-    
-    .home-section-3-main-cel {
+
+    .home-section-2-main-cel {
         margin-top: 30px;
         font-size: 1.2rem;
     }
-    
+
     #home-parameter-img {
         height: 12rem;
     }
-    
-    .home-section-3-main-foot {
+
+    .home-section-2-main-foot {
         font-size: 1.1rem;
         font-weight: 300;
     }
@@ -116,31 +125,21 @@
     .home-section-1 {
         font-size: 1.7rem;
     }
-    
-    .home-section-2 {
-        font-size: 1.1rem;
-        letter-spacing: 1px;
-    }
-    
-    .home-section-2 {
-        font-size: 1.1rem;
-        letter-spacing: 1px;
-    }
-    
-    .home-section-3-main-temp {
+
+    .home-section-2-main-temp {
         font-size: 5.5rem;
     }
-    
-    .home-section-3-main-cel {
+
+    .home-section-2-main-cel {
         margin-top: 25px;
         font-size: 1.1rem;
     }
-    
+
     #home-parameter-img {
         height: 8rem;
     }
-    
-    .home-section-3-main-foot {
+
+    .home-section-2-main-foot {
         font-size: 1rem;
         font-weight: 300;
     }
@@ -266,51 +265,189 @@
     }
 }
 
-/* Location Button */
+/* Floating Buttons */
 
-.home-location-btn {
+.home-feedback-btn-div {
     right: 0;
     bottom: 0;
     position: fixed;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin-right: 21px;
+    margin-bottom: 80px;
 }
 
-@media (max-width: 600px) {
-    .home-location-btn {
-        margin-right: 15px;
-        margin-bottom: 15px;
-    }
+.home-feedback-btn {
+    padding: 10px;
+    cursor: pointer;
+    color: #000000;
+    border-radius: 50px;
+    background-color: #afafaf;
 }
 
-@media (max-width: 330px) {
-    .home-location-btn {
-        margin-right: 10px;
-        margin-bottom: 10px;
-    }
+.feedback-icons {
+    color: #232323;
+}
+
+.feedback-box {
+    width: 90vw;
+    height: 100vh;
+    max-width: 350px;
+    color: #232323;
+    font-family: 'Poppins';
+    background-color: #c8c8c8;
+}
+
+.feedback-head {
+    height: 55px;
+    display: flex;
+    padding: 0 10px;
+    user-select: none;
+    font-size: 1.2rem;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0px 2px 10px #00000040;
+}
+
+.feedback-img {
+    padding: 30px;
+    user-select: none;
+    text-align: center;
+    pointer-events: none;
+}
+
+.feedback-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.feedback-links {
+    margin: 5px;
+    padding: 3px;
+    display: flex;
+    cursor: pointer;
+    border-radius: 8px;
+    align-items: center;
+}
+
+.feedback-links:hover {
+    background-color: #b4b4b4;
+}
+
+.feedback-links-icon {
+    padding: 5px;
+    color: #c8c8c8;
+    border-radius: 50px;
+    margin: 8px 10px 0px 10px;
+    background-color: #0085ff;
+}
+
+.feedback-body-1 {
+    flex: 1;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+}
+
+.feedback-body-1-1 {
+    flex: 1;
+}
+
+.feedback-body-1-1-1 {
+    padding: 5px 0;
+    font-size: 1.05rem;
+}
+
+.feedback-body-1-1-2 {
+    padding: 5px 0;
+}
+
+.feedback-textarea {
+    padding: 10px;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    font-weight: 300;
+    color: #232323;
+    border-radius: 8px;
+    font-family: 'Poppins';
+    width: calc(100% - 2*10px);
+    background-color: #b4b4b4;
+}
+
+.feedback-textarea::placeholder {
+    color: #4b4b4b;
+    user-select: none;
+}
+
+.feebdback-form-error {
+    font-weight: 300;
+    color: #ff0000;
+    font-size: 0.8rem;
+}
+
+.feedback-body-1-1-3 {
+    font-weight: 300;
+    font-size: 0.8rem;
+}
+
+.feedback-body-1-2 {
+    font-size: 0.85rem;
+    text-align: justify;
+}
+
+.feedback-body-1-2-link {
+    color: #232323;
+}
+
+.feedback-body-2 {
+    user-select: none;
+    text-align: right;
+    padding: 10px 20px;
+    box-shadow: 0px 2px 10px #00000040;
+}
+
+.feedback-body-2-btn {
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-family: 'Poppins';
+    background-color: #0085ff;
+}
+
+.feedback-body-2-btn:hover {
+    background-color: #0084ffbf;
+}
+
+.home-location-btn-div {
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    margin-right: 15px;
+    margin-bottom: 10px;
+}
+
+.home-location-btn {
+    padding: 13px;
+    cursor: pointer;
+    color: #000000;
+    border-radius: 50px;
+    background-color: #b02ff0;
 }
 
 /* Footer */
 
-.footer-body {
-    padding: 2px 0px;
+.footer {
+    padding: 3px;
+    color: #c8c8c8;
+    font-size: 0.95rem;
     text-align: center;
-    background-color: rgb(240, 240, 255);
+    background-color: rgba(20, 20, 20, 0.99);
 }
 
 #footer-link {
-    color: black;
+    color: #c8c8c8;
     text-decoration: none;
-}
-
-@media (max-width: 600px) {
-    .footer-body {
-        font-size: 0.9rem;
-    }
-}
-
-@media (max-width: 330px) {
-    .footer-body {
-        font-size: 0.8rem;
-    }
 }
